# code_assignments

./: 111107_Vector_Space_Model_Wedding_Gown_Cory_Randolph.ipynb  211024_Hierarchical_Clustering(Agglomerative)_Single_Link_Cory_Randolph.ipynb  211030_Starbucks_Clustering_Cory_Randolph.ipynb  211104_K_Means_Shopping_Cory_Randolph.ipynb  220225_HW_3b_DNN_YOLO.ipynb  Operational_Transformer_Example.py  README.md
211031_Dimensionality_Reduction/: Dimensionality_Reduction_Cory_Randolph.ipynb  README.md
211106_Customer_Chrurn_Article/: README.md
211124_Approximate_Nearest_Neighbor_Search/: Approximate_Nearest_Neighbors_Cory_Randolph.ipynb  README.md
211127_Clustering_Techniques/: DB_Scan_Clustering_Cory_Randolph.ipynb  Gaussian_Mixture_Clustering_Cory_Randolph.ipynb  Hierarchical_Clustering_Cory_Randolph.ipynb  K_Means_Clustering_Cory_Randolph.ipynb  README.md
211201_Market_Basket_Analysis_Apriori/: 211201_Market_Basket_Item_Apriori_Algorithm_Cory_Randolph.ipynb
211205_K_Means_From_Scratch/: K_Means_from_Scratch_Cory_Randolph.ipynb
220214_Image_Processing/: 220214_CMPE_252_HW_2_NN_CNN_Cory_Randolph.ipynb
220627_Linear_Regression/: 220621_HW_02_Cory_Randolph.ipynb  pyproject.toml
220729_Lie_Detector/: .gitignore
220729_Lie_Detector/cory_video_data_capture/: pyproject.toml
220729_Lie_Detector/cory_video_data_capture/cory_video_data_capture/: video_capuring.py
220729_Lie_Detector/cory_video_data_capture/notebook/: 0.npy  Action_Detection_Refined.ipynb
220729_Lie_Detector/cory_video_data_capture/tests/: test_cory_video_data_capture.py
220729_Lie_Detector/erics_feature_code/: pyproject.toml
220729_Lie_Detector/erics_feature_code/erics_feature_code/: truthLieDataCollector.py  truthLieDataCollector_02 (1).py
220729_Lie_Detector/erics_feature_code/tests/: test_erics_feature_code.py
220906_In_Class_Exercise/: Lincoln.txt
221006_Information_Retrieval/: pyproject.toml
221006_Information_Retrieval/notebooks/: 220910_Project_1_CMPE_297.ipynb
221006_Information_Retrieval/reference/: dummy_file
old/: 111107_Vector_Space_Model_Wedding_Gown_Cory_Randolph.ipynb  211104_K_Means_Shopping_Cory_Randolph.ipynb  211113_Information_Retieval_System_Cory_Randolph.ipynb  211121_Page_Rank_Cory_Randolph.ipynb  211209_Frequent_Pattern_Mining_and_FPGrowth_Cory_Randolph.ipynb  220225_HW_3a_DNN_YOLO.ipynb  220614_HW_01_Cory_Randolph.ipynb  (+1 more)
(+12 files in other folders)
