[tool.poetry]
name = "cory_video_data_capture"
version = "0.1.0"
description = ""
authors = ["Cory Randolph <coryroyce@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipykernel = "^6.15.1"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "piwheels"
url = "https://www.piwheels.org/simple/"
