[tool.poetry]
name = "cory_video_data_capture"
version = "0.1.0"
description = ""
authors = ["Cory Randolph <coryroyce@gmail.com>"]

[tool.poetry.dependencies]
python = "=3.10.2"
mediapipe = "^0.8.10"
opencv-python = "^4.6.0"
opencv-contrib-python = "^4.6.0"
mypy = "^0.971"
black = "^22.6.0"
tensorflow = "^2.9.1"

[tool.poetry.dev-dependencies]
ipykernel = "^6.15.1"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "piwheels"
url = "https://www.piwheels.org/simple/"

[[tool.poetry.source]]
name = "pypi-public"
url = "https://pypi.org/simple/"
default = true

