[tool.poetry]
name = "erics_feature_code"
version = "0.1.0"
description = ""
authors = ["Cory Randolph <coryroyce@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.6.0"
black = "^22.6.0"
mypy = "^0.971"
mediapipe = "^0.8.10"
keyboard = "^0.13.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
